# buffet

./: .buffet  .coveragerc  .gitignore  AAPL.csv  AAPL_2024-01-01_2024-04-18.csv  AAPL_2025-01-01_2025-04-18.csv  AMZN.csv  GLDM.csv  GOOGL.csv  META.csv  MSFT.csv  MSFT_2025-01-01_2025-04-18.csv  NVDA.csv  SPY.csv  TSLA.csv  VRT.csv  VWETX.csv  class_definition.py  main.py  main2.py  main_gen_pdf.py  pyproject.toml  pytest.ini  readme.md  run1_get_timeseries.py  run2_gen_json.py  run3_gen_pdf.py  script_download_timeseries.py  test.py  test2.py  test3.py  testdata.json  testdata.py  testdata1.json  testdata2.json  testdata2.py  testdata3.json  util.py  util_data.py  util_ui.py
.cursor/rules/: python.mdc
.github/: copilot-instructions.md
.sonarlint/: connectedMode.json
scripts/: generate_coverage_badge.py
test/: test_buffet.py  test_pdf.py  test_util.py  unemployment.csv  unemployment2.csv
test/baseline/: baseline.txt  baseline_changes.json  baseline_prices.json
