[project]
name = "Buffet"
version = "0.1.1"
dependencies = [
    "anybadge>=1.16.0",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "matplotlib>=3.10.1",
    "pyyaml>=6.0",
    "fpdf>=1.7.2",
    "types-requests>=2.32.0.20250328",
    "types-pyyaml>=6.0.12.20250402",
    "types-fpdf2>=2.8.2.20250318",
    "pandas-stubs>=2.2.3.250308",
    "yfinance>=0.2.55",
    "pypdf>=5.4.0",
]
[tool.mypy]
ignore_missing_imports = true
